--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
@@ -24,7 +22,12 @@
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.2",
     "next": "13.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@emotion/babel-plugin": "^11.10.6"
   }
 }
