--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@vercel/analytics": "^0.1.10",
     "chakra-ui-carousel": "^1.0.6",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
