--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.2",
+    "gnews": "^1.0.3",
     "next": "13.1.6",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "rss-parser": "^3.12.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
