--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.0.10",
     "@vercel/analytics": "^0.1.10",
     "chakra-ui-carousel": "^1.0.6",
+    "date-fns": "^2.29.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.2",
@@ -29,8 +30,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "recharts": "^2.4.3",
     "rss-parser": "^3.12.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "yahoo-finance": "^0.3.8"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.6"
